<resources>
    <string name="app_name">DiceRoller</string>
    <string name="helloMessage">Roll the dice!</string>
    <string name="letsRoll">Lets roll!</string>
    <string name="rolled">Rolled!</string>
    <string name="diceRolled">The dice has been rolled!</string>
    <string name="emptyImage">An empty image</string>
    <string name="clickToRoll">Click to roll</string>
    <string name="aboutText">Andre Furlan</string>
    <string name="aboutThisApp">About this app</string>
    <string name="yellowStar">Yellow star</string>
    <string name="bio">From several eons ago, when the molecules begin to form and life was just an possibility, nobody could imagine (well... there was not anyone) that an brazilian programmer could be spending hours and hours of his life coding such a basic application. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view. This is to test the scrollability of the view.</string>
    <string name="youNicknameGoesHere">You nickname goes here</string>
    <string name="done">Done</string>
</resources>